{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 172,
  "lineage": "93671569-f10b-e9ed-cba1-e3d0312932ad",
  "resources": [
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/e67fe41b-01d6-42b3-9179-c7fbd000f569/resourceGroups/nd082-c1-project-vm-rg/providers/Microsoft.Network/loadBalancers/nd082-c1-project-vm-lb/frontendIPConfigurations/nd082-c1-project-vm-primary",
                "name": "nd082-c1-project-vm-primary",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e67fe41b-01d6-42b3-9179-c7fbd000f569/resourceGroups/nd082-c1-project-vm-rg/providers/Microsoft.Network/publicIPAddresses/nd082-c1-project-vm-lb-publicip"
              }
            ],
            "id": "/subscriptions/e67fe41b-01d6-42b3-9179-c7fbd000f569/resourceGroups/nd082-c1-project-vm-rg/providers/Microsoft.Network/loadBalancers/nd082-c1-project-vm-lb",
            "location": "eastus",
            "name": "nd082-c1-project-vm-lb",
            "resource_group_name": "nd082-c1-project-vm-rg",
            "sku": "Standard",
            "tags": {
              "environment": "eval",
              "project": "nd082-c1-project"
            }
          },
          "dependencies": [
            "module.loadbalancer.azurerm_public_ip.main",
            "module.networking.azurerm_network_security_group.internal",
            "module.networking.azurerm_network_security_rule.internal-internet",
            "module.networking.azurerm_network_security_rule.internal-vnet",
            "module.networking.azurerm_resource_group.main",
            "module.networking.azurerm_subnet.internal",
            "module.networking.azurerm_subnet_network_security_group_association.internal",
            "module.networking.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e67fe41b-01d6-42b3-9179-c7fbd000f569/resourceGroups/nd082-c1-project-vm-rg/providers/Microsoft.Network/loadBalancers/nd082-c1-project-vm-lb/backendAddressPools/nd082-c1-project-vm-BackEndAddressPool",
            "loadbalancer_id": "/subscriptions/e67fe41b-01d6-42b3-9179-c7fbd000f569/resourceGroups/nd082-c1-project-vm-rg/providers/Microsoft.Network/loadBalancers/nd082-c1-project-vm-lb",
            "name": "nd082-c1-project-vm-BackEndAddressPool",
            "resource_group_name": "nd082-c1-project-vm-rg"
          },
          "dependencies": [
            "module.loadbalancer.azurerm_lb.main",
            "module.loadbalancer.azurerm_public_ip.main",
            "module.networking.azurerm_network_security_group.internal",
            "module.networking.azurerm_network_security_rule.internal-internet",
            "module.networking.azurerm_network_security_rule.internal-vnet",
            "module.networking.azurerm_resource_group.main",
            "module.networking.azurerm_subnet.internal",
            "module.networking.azurerm_subnet_network_security_group_association.internal",
            "module.networking.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "lbprobe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e67fe41b-01d6-42b3-9179-c7fbd000f569/resourceGroups/nd082-c1-project-vm-rg/providers/Microsoft.Network/loadBalancers/nd082-c1-project-vm-lb/probes/tcp-running-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/e67fe41b-01d6-42b3-9179-c7fbd000f569/resourceGroups/nd082-c1-project-vm-rg/providers/Microsoft.Network/loadBalancers/nd082-c1-project-vm-lb",
            "name": "tcp-running-probe",
            "number_of_probes": 4,
            "port": 80,
            "protocol": "Tcp",
            "resource_group_name": "nd082-c1-project-vm-rg"
          },
          "dependencies": [
            "module.loadbalancer.azurerm_lb.main",
            "module.loadbalancer.azurerm_public_ip.main",
            "module.networking.azurerm_network_security_group.internal",
            "module.networking.azurerm_network_security_rule.internal-internet",
            "module.networking.azurerm_network_security_rule.internal-vnet",
            "module.networking.azurerm_resource_group.main",
            "module.networking.azurerm_subnet.internal",
            "module.networking.azurerm_subnet_network_security_group_association.internal",
            "module.networking.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lbnatrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/e67fe41b-01d6-42b3-9179-c7fbd000f569/resourceGroups/nd082-c1-project-vm-rg/providers/Microsoft.Network/loadBalancers/nd082-c1-project-vm-lb/backendAddressPools/nd082-c1-project-vm-BackEndAddressPool",
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/e67fe41b-01d6-42b3-9179-c7fbd000f569/resourceGroups/nd082-c1-project-vm-rg/providers/Microsoft.Network/loadBalancers/nd082-c1-project-vm-lb/frontendIPConfigurations/nd082-c1-project-vm-primary",
            "frontend_ip_configuration_name": "nd082-c1-project-vm-primary",
            "frontend_port": 80,
            "id": "/subscriptions/e67fe41b-01d6-42b3-9179-c7fbd000f569/resourceGroups/nd082-c1-project-vm-rg/providers/Microsoft.Network/loadBalancers/nd082-c1-project-vm-lb/loadBalancingRules/http",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/e67fe41b-01d6-42b3-9179-c7fbd000f569/resourceGroups/nd082-c1-project-vm-rg/providers/Microsoft.Network/loadBalancers/nd082-c1-project-vm-lb",
            "name": "http",
            "probe_id": "/subscriptions/e67fe41b-01d6-42b3-9179-c7fbd000f569/resourceGroups/nd082-c1-project-vm-rg/providers/Microsoft.Network/loadBalancers/nd082-c1-project-vm-lb/probes/tcp-running-probe",
            "protocol": "Tcp",
            "resource_group_name": "nd082-c1-project-vm-rg"
          },
          "dependencies": [
            "module.loadbalancer.azurerm_lb.main",
            "module.loadbalancer.azurerm_lb_backend_address_pool.internal",
            "module.loadbalancer.azurerm_lb_probe.lbprobe",
            "module.loadbalancer.azurerm_public_ip.main",
            "module.networking.azurerm_network_security_group.internal",
            "module.networking.azurerm_network_security_rule.internal-internet",
            "module.networking.azurerm_network_security_rule.internal-vnet",
            "module.networking.azurerm_resource_group.main",
            "module.networking.azurerm_subnet.internal",
            "module.networking.azurerm_subnet_network_security_group_association.internal",
            "module.networking.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/e67fe41b-01d6-42b3-9179-c7fbd000f569/resourceGroups/nd082-c1-project-vm-rg/providers/Microsoft.Network/publicIPAddresses/nd082-c1-project-vm-lb-publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.62.143.213",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "nd082-c1-project-vm-lb-publicip",
            "resource_group_name": "nd082-c1-project-vm-rg",
            "sku": "Standard",
            "tags": {
              "environment": "eval",
              "project": "nd082-c1-project"
            }
          },
          "dependencies": [
            "module.networking.azurerm_network_security_group.internal",
            "module.networking.azurerm_network_security_rule.internal-internet",
            "module.networking.azurerm_network_security_rule.internal-vnet",
            "module.networking.azurerm_resource_group.main",
            "module.networking.azurerm_subnet.internal",
            "module.networking.azurerm_subnet_network_security_group_association.internal",
            "module.networking.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e67fe41b-01d6-42b3-9179-c7fbd000f569/resourceGroups/nd082-c1-project-vm-rg/providers/Microsoft.Network/networkSecurityGroups/nd082-c1-project-vm-nsg",
            "location": "eastus",
            "name": "nd082-c1-project-vm-nsg",
            "resource_group_name": "nd082-c1-project-vm-rg",
            "security_rule": [],
            "tags": {
              "environment": "eval",
              "project": "nd082-c1-project"
            },
            "timeouts": null
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "internal-internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/e67fe41b-01d6-42b3-9179-c7fbd000f569/resourceGroups/nd082-c1-project-vm-rg/providers/Microsoft.Network/networkSecurityGroups/nd082-c1-project-vm-nsg/securityRules/AllowLBTraffic",
            "name": "AllowLBTraffic",
            "network_security_group_name": "nd082-c1-project-vm-nsg",
            "priority": 110,
            "protocol": "TCP",
            "resource_group_name": "nd082-c1-project-vm-rg",
            "source_address_prefix": "Internet",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "dependencies": [
            "module.networking.azurerm_network_security_group.internal",
            "module.networking.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e67fe41b-01d6-42b3-9179-c7fbd000f569/resourceGroups/nd082-c1-project-vm-rg/providers/Microsoft.Network/virtualNetworks/nd082-c1-project-vm-network/subnets/nd082-c1-project-vm-internal",
            "name": "nd082-c1-project-vm-internal",
            "resource_group_name": "nd082-c1-project-vm-rg",
            "virtual_network_name": "nd082-c1-project-vm-network"
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.main",
            "module.networking.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e67fe41b-01d6-42b3-9179-c7fbd000f569/resourceGroups/nd082-c1-project-vm-rg/providers/Microsoft.Network/virtualNetworks/nd082-c1-project-vm-network/subnets/nd082-c1-project-vm-internal",
            "network_security_group_id": "/subscriptions/e67fe41b-01d6-42b3-9179-c7fbd000f569/resourceGroups/nd082-c1-project-vm-rg/providers/Microsoft.Network/networkSecurityGroups/nd082-c1-project-vm-nsg",
            "subnet_id": "/subscriptions/e67fe41b-01d6-42b3-9179-c7fbd000f569/resourceGroups/nd082-c1-project-vm-rg/providers/Microsoft.Network/virtualNetworks/nd082-c1-project-vm-network/subnets/nd082-c1-project-vm-internal"
          },
          "dependencies": [
            "module.networking.azurerm_network_security_group.internal",
            "module.networking.azurerm_resource_group.main",
            "module.networking.azurerm_subnet.internal",
            "module.networking.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "9cc51cd8-06e2-4f79-8cd8-f2a4d20e66f2",
            "id": "/subscriptions/e67fe41b-01d6-42b3-9179-c7fbd000f569/resourceGroups/nd082-c1-project-vm-rg/providers/Microsoft.Network/virtualNetworks/nd082-c1-project-vm-network",
            "location": "eastus",
            "name": "nd082-c1-project-vm-network",
            "resource_group_name": "nd082-c1-project-vm-rg",
            "tags": {
              "environment": "eval",
              "project": "nd082-c1-project"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.vmconfig",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e67fe41b-01d6-42b3-9179-c7fbd000f569/resourceGroups/nd082-c1-project-vm-rg/providers/Microsoft.Network/networkInterfaces/nd082-c1-project-vm-nic-0",
            "internal_domain_name_suffix": "1aomlhhcaz2u5dgy4ksnedtg4c.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal-0-ip",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e67fe41b-01d6-42b3-9179-c7fbd000f569/resourceGroups/nd082-c1-project-vm-rg/providers/Microsoft.Network/virtualNetworks/nd082-c1-project-vm-network/subnets/nd082-c1-project-vm-internal"
              }
            ],
            "location": "eastus",
            "name": "nd082-c1-project-vm-nic-0",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "nd082-c1-project-vm-rg",
            "tags": {
              "environment": "eval",
              "project": "nd082-c1-project"
            }
          },
          "dependencies": [
            "module.loadbalancer.azurerm_lb.main",
            "module.loadbalancer.azurerm_lb_backend_address_pool.internal",
            "module.loadbalancer.azurerm_lb_probe.lbprobe",
            "module.loadbalancer.azurerm_lb_rule.lbnatrule",
            "module.loadbalancer.azurerm_public_ip.main",
            "module.networking.azurerm_network_security_group.internal",
            "module.networking.azurerm_network_security_rule.internal-internet",
            "module.networking.azurerm_network_security_rule.internal-vnet",
            "module.networking.azurerm_resource_group.main",
            "module.networking.azurerm_subnet.internal",
            "module.networking.azurerm_subnet_network_security_group_association.internal",
            "module.networking.azurerm_virtual_network.main",
            "module.vmconfig.azurerm_public_ip.internal"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e67fe41b-01d6-42b3-9179-c7fbd000f569/resourceGroups/nd082-c1-project-vm-rg/providers/Microsoft.Network/networkInterfaces/nd082-c1-project-vm-nic-1",
            "internal_domain_name_suffix": "1aomlhhcaz2u5dgy4ksnedtg4c.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal-1-ip",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e67fe41b-01d6-42b3-9179-c7fbd000f569/resourceGroups/nd082-c1-project-vm-rg/providers/Microsoft.Network/virtualNetworks/nd082-c1-project-vm-network/subnets/nd082-c1-project-vm-internal"
              }
            ],
            "location": "eastus",
            "name": "nd082-c1-project-vm-nic-1",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "nd082-c1-project-vm-rg",
            "tags": {
              "environment": "eval",
              "project": "nd082-c1-project"
            }
          },
          "dependencies": [
            "module.loadbalancer.azurerm_lb.main",
            "module.loadbalancer.azurerm_lb_backend_address_pool.internal",
            "module.loadbalancer.azurerm_lb_probe.lbprobe",
            "module.loadbalancer.azurerm_lb_rule.lbnatrule",
            "module.loadbalancer.azurerm_public_ip.main",
            "module.networking.azurerm_network_security_group.internal",
            "module.networking.azurerm_network_security_rule.internal-internet",
            "module.networking.azurerm_network_security_rule.internal-vnet",
            "module.networking.azurerm_resource_group.main",
            "module.networking.azurerm_subnet.internal",
            "module.networking.azurerm_subnet_network_security_group_association.internal",
            "module.networking.azurerm_virtual_network.main",
            "module.vmconfig.azurerm_public_ip.internal"
          ]
        }
      ]
    },
    {
      "module": "module.vmconfig",
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/e67fe41b-01d6-42b3-9179-c7fbd000f569/resourceGroups/nd082-c1-project-vm-rg/providers/Microsoft.Network/loadBalancers/nd082-c1-project-vm-lb/backendAddressPools/nd082-c1-project-vm-BackEndAddressPool",
            "id": "/subscriptions/e67fe41b-01d6-42b3-9179-c7fbd000f569/resourceGroups/nd082-c1-project-vm-rg/providers/Microsoft.Network/networkInterfaces/nd082-c1-project-vm-nic-0/ipConfigurations/internal-0-ip|/subscriptions/e67fe41b-01d6-42b3-9179-c7fbd000f569/resourceGroups/nd082-c1-project-vm-rg/providers/Microsoft.Network/loadBalancers/nd082-c1-project-vm-lb/backendAddressPools/nd082-c1-project-vm-BackEndAddressPool",
            "ip_configuration_name": "internal-0-ip",
            "network_interface_id": "/subscriptions/e67fe41b-01d6-42b3-9179-c7fbd000f569/resourceGroups/nd082-c1-project-vm-rg/providers/Microsoft.Network/networkInterfaces/nd082-c1-project-vm-nic-0"
          },
          "dependencies": [
            "module.loadbalancer.azurerm_lb.main",
            "module.loadbalancer.azurerm_lb_backend_address_pool.internal",
            "module.loadbalancer.azurerm_lb_probe.lbprobe",
            "module.loadbalancer.azurerm_lb_rule.lbnatrule",
            "module.loadbalancer.azurerm_public_ip.main",
            "module.networking.azurerm_network_security_group.internal",
            "module.networking.azurerm_network_security_rule.internal-internet",
            "module.networking.azurerm_network_security_rule.internal-vnet",
            "module.networking.azurerm_resource_group.main",
            "module.networking.azurerm_subnet.internal",
            "module.networking.azurerm_subnet_network_security_group_association.internal",
            "module.networking.azurerm_virtual_network.main",
            "module.vmconfig.azurerm_network_interface.internal",
            "module.vmconfig.azurerm_public_ip.internal"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/e67fe41b-01d6-42b3-9179-c7fbd000f569/resourceGroups/nd082-c1-project-vm-rg/providers/Microsoft.Network/loadBalancers/nd082-c1-project-vm-lb/backendAddressPools/nd082-c1-project-vm-BackEndAddressPool",
            "id": "/subscriptions/e67fe41b-01d6-42b3-9179-c7fbd000f569/resourceGroups/nd082-c1-project-vm-rg/providers/Microsoft.Network/networkInterfaces/nd082-c1-project-vm-nic-1/ipConfigurations/internal-1-ip|/subscriptions/e67fe41b-01d6-42b3-9179-c7fbd000f569/resourceGroups/nd082-c1-project-vm-rg/providers/Microsoft.Network/loadBalancers/nd082-c1-project-vm-lb/backendAddressPools/nd082-c1-project-vm-BackEndAddressPool",
            "ip_configuration_name": "internal-1-ip",
            "network_interface_id": "/subscriptions/e67fe41b-01d6-42b3-9179-c7fbd000f569/resourceGroups/nd082-c1-project-vm-rg/providers/Microsoft.Network/networkInterfaces/nd082-c1-project-vm-nic-1"
          },
          "dependencies": [
            "module.loadbalancer.azurerm_lb.main",
            "module.loadbalancer.azurerm_lb_backend_address_pool.internal",
            "module.loadbalancer.azurerm_lb_probe.lbprobe",
            "module.loadbalancer.azurerm_lb_rule.lbnatrule",
            "module.loadbalancer.azurerm_public_ip.main",
            "module.networking.azurerm_network_security_group.internal",
            "module.networking.azurerm_network_security_rule.internal-internet",
            "module.networking.azurerm_network_security_rule.internal-vnet",
            "module.networking.azurerm_resource_group.main",
            "module.networking.azurerm_subnet.internal",
            "module.networking.azurerm_subnet_network_security_group_association.internal",
            "module.networking.azurerm_virtual_network.main",
            "module.vmconfig.azurerm_network_interface.internal",
            "module.vmconfig.azurerm_public_ip.internal"
          ]
        }
      ]
    }
  ]
}